// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-drawer-dialog Custom Focus 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
  <div>
    <div
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
      >
        <button
          class="drawer-dialog__handle"
          type="button"
        />
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          />
          <button
            class="icon-btn drawer-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
        <div
          class="drawer-dialog__footer"
        >
          <button
            class="btn btn--secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Default 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
  <div>
    <div
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
      >
        <button
          class="drawer-dialog__handle"
          type="button"
        />
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          />
          <button
            class="icon-btn drawer-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Lots Of Content 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
  <p>
    1
  </p>
  <p>
    2
  </p>
  <p>
    3
  </p>
  <p>
    4
  </p>
  <p>
    5
  </p>
  <p>
    6
  </p>
  <p>
    7
  </p>
  <p>
    8
  </p>
  <p>
    9
  </p>
  <p>
    10
  </p>
  <p>
    11
  </p>
  <p>
    12
  </p>
  <p>
    13
  </p>
  <p>
    14
  </p>
  <p>
    15
  </p>
  <p>
    16
  </p>
  <p>
    17
  </p>
  <p>
    18
  </p>
  <p>
    19
  </p>
  <p>
    20
  </p>
  <p>
    21
  </p>
  <p>
    22
  </p>
  <p>
    23
  </p>
  <p>
    24
  </p>
  <p>
    25
  </p>
  <p>
    26
  </p>
  <p>
    27
  </p>
  <p>
    28
  </p>
  <p>
    29
  </p>
  <p>
    30
  </p>
  <p>
    31
  </p>
  <p>
    32
  </p>
  <p>
    33
  </p>
  <p>
    34
  </p>
  <p>
    35
  </p>
  <p>
    36
  </p>
  <p>
    37
  </p>
  <p>
    38
  </p>
  <p>
    39
  </p>
  <p>
    40
  </p>
  <p>
    41
  </p>
  <p>
    42
  </p>
  <p>
    43
  </p>
  <p>
    44
  </p>
  <p>
    45
  </p>
  <p>
    46
  </p>
  <p>
    47
  </p>
  <p>
    48
  </p>
  <p>
    49
  </p>
  <p>
    50
  </p>
  <p>
    51
  </p>
  <p>
    52
  </p>
  <p>
    53
  </p>
  <p>
    54
  </p>
  <p>
    55
  </p>
  <p>
    56
  </p>
  <p>
    57
  </p>
  <p>
    58
  </p>
  <p>
    59
  </p>
  <p>
    60
  </p>
  <p>
    61
  </p>
  <p>
    62
  </p>
  <p>
    63
  </p>
  <p>
    64
  </p>
  <p>
    65
  </p>
  <p>
    66
  </p>
  <p>
    67
  </p>
  <p>
    68
  </p>
  <p>
    69
  </p>
  <p>
    70
  </p>
  <p>
    71
  </p>
  <p>
    72
  </p>
  <p>
    73
  </p>
  <p>
    74
  </p>
  <p>
    75
  </p>
  <p>
    76
  </p>
  <p>
    77
  </p>
  <p>
    78
  </p>
  <p>
    79
  </p>
  <p>
    80
  </p>
  <p>
    81
  </p>
  <p>
    82
  </p>
  <p>
    83
  </p>
  <p>
    84
  </p>
  <p>
    85
  </p>
  <p>
    86
  </p>
  <p>
    87
  </p>
  <p>
    88
  </p>
  <p>
    89
  </p>
  <p>
    90
  </p>
  <p>
    91
  </p>
  <p>
    92
  </p>
  <p>
    93
  </p>
  <p>
    94
  </p>
  <p>
    95
  </p>
  <p>
    96
  </p>
  <p>
    97
  </p>
  <p>
    98
  </p>
  <p>
    99
  </p>
  <p>
    100
  </p>
  <div>
    <div
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
      >
        <button
          class="drawer-dialog__handle"
          type="button"
        />
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          >
            Scrollable content
          </h2>
          <button
            class="icon-btn drawer-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            1
          </p>
          <p>
            2
          </p>
          <p>
            3
          </p>
          <p>
            4
          </p>
          <p>
            5
          </p>
          <p>
            6
          </p>
          <p>
            7
          </p>
          <p>
            8
          </p>
          <p>
            9
          </p>
          <p>
            10
          </p>
          <p>
            11
          </p>
          <p>
            12
          </p>
          <p>
            13
          </p>
          <p>
            14
          </p>
          <p>
            15
          </p>
          <p>
            16
          </p>
          <p>
            17
          </p>
          <p>
            18
          </p>
          <p>
            19
          </p>
          <p>
            20
          </p>
          <p>
            21
          </p>
          <p>
            22
          </p>
          <p>
            23
          </p>
          <p>
            24
          </p>
          <p>
            25
          </p>
          <p>
            26
          </p>
          <p>
            27
          </p>
          <p>
            28
          </p>
          <p>
            29
          </p>
          <p>
            30
          </p>
          <p>
            31
          </p>
          <p>
            32
          </p>
          <p>
            33
          </p>
          <p>
            34
          </p>
          <p>
            35
          </p>
          <p>
            36
          </p>
          <p>
            37
          </p>
          <p>
            38
          </p>
          <p>
            39
          </p>
          <p>
            40
          </p>
          <p>
            41
          </p>
          <p>
            42
          </p>
          <p>
            43
          </p>
          <p>
            44
          </p>
          <p>
            45
          </p>
          <p>
            46
          </p>
          <p>
            47
          </p>
          <p>
            48
          </p>
          <p>
            49
          </p>
          <p>
            50
          </p>
          <p>
            51
          </p>
          <p>
            52
          </p>
          <p>
            53
          </p>
          <p>
            54
          </p>
          <p>
            55
          </p>
          <p>
            56
          </p>
          <p>
            57
          </p>
          <p>
            58
          </p>
          <p>
            59
          </p>
          <p>
            60
          </p>
          <p>
            61
          </p>
          <p>
            62
          </p>
          <p>
            63
          </p>
          <p>
            64
          </p>
          <p>
            65
          </p>
          <p>
            66
          </p>
          <p>
            67
          </p>
          <p>
            68
          </p>
          <p>
            69
          </p>
          <p>
            70
          </p>
          <p>
            71
          </p>
          <p>
            72
          </p>
          <p>
            73
          </p>
          <p>
            74
          </p>
          <p>
            75
          </p>
          <p>
            76
          </p>
          <p>
            77
          </p>
          <p>
            78
          </p>
          <p>
            79
          </p>
          <p>
            80
          </p>
          <p>
            81
          </p>
          <p>
            82
          </p>
          <p>
            83
          </p>
          <p>
            84
          </p>
          <p>
            85
          </p>
          <p>
            86
          </p>
          <p>
            87
          </p>
          <p>
            88
          </p>
          <p>
            89
          </p>
          <p>
            90
          </p>
          <p>
            91
          </p>
          <p>
            92
          </p>
          <p>
            93
          </p>
          <p>
            94
          </p>
          <p>
            95
          </p>
          <p>
            96
          </p>
          <p>
            97
          </p>
          <p>
            98
          </p>
          <p>
            99
          </p>
          <p>
            100
          </p>
        </div>
        <div
          class="drawer-dialog__footer"
        >
          <button
            class="btn btn--secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Opened 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <div
      aria-hidden="false"
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow drawer-dialog--show-init"
      role="dialog"
    >
      <div
        aria-hidden="true"
        class="keyboard-trap-boundary"
        tabindex="0"
      />
      <div
        aria-hidden="false"
        class="drawer-dialog__window drawer-dialog__window--slide keyboard-trap--active"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <button
          class="drawer-dialog__handle"
          type="button"
        />
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          />
          <button
            aria-label="Close drawer"
            class="icon-btn drawer-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="keyboard-trap-boundary"
        tabindex="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Trigger Expanded 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
  <div>
    <div
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
      >
        <button
          class="drawer-dialog__handle"
          type="button"
        />
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          />
          <button
            class="icon-btn drawer-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            Trigger Dialog Expanded programmatically.
          </p>
          <button
            class="btn btn--secondary"
          >
            Expand Drawer
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Without Animation 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Without Handle 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
  <div>
    <div
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
      >
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          />
          <button
            class="icon-btn drawer-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-drawer-dialog Without Handle And Close Button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Drawer
  </button>
  <div>
    <div
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="drawer-dialog drawer-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="drawer-dialog__window drawer-dialog__window drawer-dialog__window--slide"
      >
        <div
          class="drawer-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          />
        </div>
        <div
          class="drawer-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
